--- a/notebooks/Reporting.ipynb
+++ b/notebooks/Reporting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 71,
    "id": "293d42bc",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 72,
    "id": "407c582e",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
      "output_type": "stream",
      "text": [
       " Configuration loaded for NW Realite - Property Valuation Analysis Report\n",
-      " Report date: December 03, 2025\n"
+      " Report date: December 04, 2025\n"
      ]
     }
    ],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 73,
    "id": "0f6e8e84",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 74,
    "id": "de518961",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 75,
    "id": "bb206a63",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 76,
    "id": "2d37111d",
    "metadata": {},
    "outputs": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 84,
    "id": "cd6a79a4",
    "metadata": {},
    "outputs": [
@@ -513,11 +513,15 @@
       "================================================================================\n",
       "AI-GENERATED REPORT PREVIEW (First 500 characters):\n",
       "================================================================================\n",
-      "Date: 2nd December 2025\n",
+      "Property Valuation Portfolio Executive Report\n",
+      "\n",
+      "Date: 4th December 2025\n",
+      "Prepared by: Samuel Wanyua, Data Scientist, NW Realite\n",
       "\n",
       "EXECUTIVE SUMMARY\n",
       "\n",
-      "This report provides a comprehensive overview of NW Realite's property valuation portfolio, analyzing key performance indicators, growth trends, client and geographic distribution, and inherent risks. The portfolio demonstrates robust value growth, currently standing at KShs 12.33 billion across 114 properties. While experiencing significant month-on-month value growth, the portfolio exhibits high concentration in both client segments and geographic lo...\n"
+      "1. Portfolio Overview\n",
+      "The current property valuation portfolio comprises 114 properties, reflecting a substantial total market value of KShs 12,331,200,000. The average property value stands at KShs 108,168,421. However, a significant disparity is observed with the median property value at KShs 51,000,000, which suggests the presence of a few exception...\n"
      ]
     }
    ],
@@ -592,6 +596,9 @@
     "{metrics_summary}\n",
     "\n",
     "The report should be structured as follows:\n",
+    "Title\n",
+    "date - 4th Dec 2025\n",
+    "then  Prepared by Samuel Wanyua, Data Scientist, NW Realite\n",
     "\n",
     "EXECUTIVE SUMMARY\n",
     "\n",
@@ -616,12 +623,12 @@
     "Discuss land use distribution, value per acre trends, and property characteristics in 1-2 paragraphs.\n",
     "\n",
     "7. Strategic Recommendations\n",
-    "Provide 5-7 actionable recommendations as numbered points.\n",
+    "Provide 5-7 actionable recommendations as numbered points. (use consistent font size as with others)\n",
     "\n",
     "8. Key Takeaways\n",
-    "Summarize 3-5 most important insights as numbered points.\n",
+    "Summarize 3-5 most important insights as numbered points. (use consistent font size as with others)\n",
     "\n",
-    "CRITICAL: Do not use any markdown formatting (no *, **, #, etc.). Write in clean, professional prose with clear section numbers and simple bullet points using dashes.\n",
+    "CRITICAL: Do not use any markdown formatting (no *, **, #, etc.). Write in clean, professional prose with clear section numbers and simple bullet points using dashes with consistent font size throughout the document.\n",
     "\"\"\"\n",
     "    \n",
     "    try:\n",
@@ -656,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 85,
    "id": "21dac93e",
    "metadata": {},
    "outputs": [
@@ -671,7 +678,6 @@
    "source": [
     "def create_pdf_report(metrics, ai_report, chart_buffer, filename=\"NW_Realite_Valuation_Report.pdf\"):\n",
     "    \"\"\"Generate professional PDF report\"\"\"\n",
-    "    \n",
     "    doc = SimpleDocTemplate(\n",
     "        filename,\n",
     "        pagesize=A4,\n",
@@ -686,40 +692,40 @@
     "    \n",
     "    # ===== CUSTOM STYLES =====\n",
     "    title_style = ParagraphStyle(\n",
-    "        'CustomTitle', \n",
+    "        'CustomTitle',\n",
     "        parent=styles['Title'],\n",
-    "        fontSize=24, \n",
+    "        fontSize=24,\n",
     "        textColor=colors.HexColor(\"#000000\"),\n",
-    "        spaceAfter=12, \n",
+    "        spaceAfter=12,\n",
     "        alignment=TA_CENTER,\n",
     "        fontName='Helvetica-Bold'\n",
     "    )\n",
     "    \n",
     "    heading_style = ParagraphStyle(\n",
-    "        'CustomHeading', \n",
+    "        'CustomHeading',\n",
     "        parent=styles['Heading1'],\n",
-    "        fontSize=14, \n",
+    "        fontSize=14,\n",
     "        textColor=colors.HexColor(\"#000000\"),\n",
-    "        spaceAfter=10, \n",
-    "        spaceBefore=15, \n",
+    "        spaceAfter=10,\n",
+    "        spaceBefore=15,\n",
     "        fontName='Helvetica-Bold'\n",
     "    )\n",
     "    \n",
     "    subheading_style = ParagraphStyle(\n",
-    "        'CustomSubHeading', \n",
+    "        'CustomSubHeading',\n",
     "        parent=styles['Heading2'],\n",
-    "        fontSize=11, \n",
+    "        fontSize=11,\n",
     "        textColor=colors.HexColor(\"#000000\"),\n",
-    "        spaceAfter=6, \n",
-    "        spaceBefore=8, \n",
+    "        spaceAfter=6,\n",
+    "        spaceBefore=8,\n",
     "        fontName='Helvetica-Bold'\n",
     "    )\n",
     "    \n",
     "    body_style = ParagraphStyle(\n",
-    "        'CustomBody', \n",
+    "        'CustomBody',\n",
     "        parent=styles['BodyText'],\n",
-    "        fontSize=10, \n",
-    "        leading=14, \n",
+    "        fontSize=10,\n",
+    "        leading=14,\n",
     "        alignment=TA_LEFT,\n",
     "        spaceAfter=8\n",
     "    )\n",
@@ -727,10 +733,31 @@
     "    # ===== TITLE PAGE =====\n",
     "    story.append(Paragraph(COMPANY_NAME, title_style))\n",
     "    story.append(Spacer(1, 0.2*inch))\n",
-    "    # story.append(Paragraph(\"Property Valuation Analysis Report\", heading_style))\n",
     "    story.append(Spacer(1, 0.4*inch))\n",
     "    \n",
-    "    # ===== KEY METRICS TABLE =====\n",
+    "    # Process the AI report text\n",
+    "    # Split by paragraphs and detect section headers\n",
+    "    lines = ai_report.split('\\n')\n",
+    "    for line in lines:\n",
+    "        line = line.strip()\n",
+    "        if not line:\n",
+    "            continue\n",
+    "        \n",
+    "        # Detect section headers (lines that start with numbers or are in ALL CAPS)\n",
+    "        if (line and (line[0].isdigit() and '.' in line[:3])) or line.isupper():\n",
+    "            # This is a section header\n",
+    "            story.append(Spacer(1, 0.15*inch))\n",
+    "            story.append(Paragraph(line, subheading_style))\n",
+    "        else:\n",
+    "            # Regular paragraph\n",
+    "            story.append(Paragraph(line, body_style))\n",
+    "    \n",
+    "    story.append(Spacer(1, 0.5*inch))\n",
+    "    \n",
+    "    # ===== PAGE BREAK BEFORE METRICS (OPTIONAL) =====\n",
+    "    story.append(PageBreak())  \n",
+    "    \n",
+    "    # ===== KEY METRICS TABLE (MOVED AFTER AI REPORT) =====\n",
     "    story.append(Paragraph(\"Executive Summary - Key Metrics\", heading_style))\n",
     "    story.append(Spacer(1, 0.1*inch))\n",
     "    \n",
@@ -769,39 +796,13 @@
     "    ]))\n",
     "    \n",
     "    story.append(key_metrics_table)\n",
-    "    story.append(Spacer(1, 0.4*inch))\n",
-    "    \n",
-    "    # ===== AI-GENERATED REPORT TEXT =====\n",
-    "    # story.append(Paragraph(\"Analysis & Insights\", heading_style))\n",
-    "    # story.append(Spacer(1, 0.1*inch))\n",
-    "    \n",
-    "    # Process the AI report text\n",
-    "    # Split by paragraphs and detect section headers\n",
-    "    lines = ai_report.split('\\n')\n",
-    "    \n",
-    "    for line in lines:\n",
-    "        line = line.strip()\n",
-    "        \n",
-    "        if not line:\n",
-    "            continue\n",
-    "            \n",
-    "        # Detect section headers (lines that start with numbers or are in ALL CAPS)\n",
-    "        if (line and (line[0].isdigit() and '.' in line[:3])) or line.isupper():\n",
-    "            # This is a section header\n",
-    "            story.append(Spacer(1, 0.15*inch))\n",
-    "            story.append(Paragraph(line, subheading_style))\n",
-    "        else:\n",
-    "            # Regular paragraph\n",
-    "            story.append(Paragraph(line, body_style))\n",
-    "    \n",
     "    story.append(Spacer(1, 0.3*inch))\n",
     "    \n",
     "    # ===== CHART IMAGE =====\n",
-    "    story.append(Paragraph(\"Portfolio Trend Chart\", heading_style))\n",
-    "    story.append(Spacer(1, 0.1*inch))\n",
-    "    \n",
-    "    chart_buffer.seek(0)\n",
-    "    story.append(Image(chart_buffer, width=6*inch, height=3.5*inch))\n",
+    "    # story.append(Paragraph(\"Portfolio Trend Chart\", heading_style))\n",
+    "    # story.append(Spacer(1, 0.1*inch))\n",
+    "    # chart_buffer.seek(0)\n",
+    "    # story.append(Image(chart_buffer, width=6*inch, height=3.5*inch))\n",
     "    \n",
     "    # ===== BUILD PDF =====\n",
     "    doc.build(story)\n",
