--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -32,13 +32,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "id": "b4281297",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Configuration loaded\n",
+      "  PDF Directory: Z:\\Risper M\\2025 valuation reports\\Year 2025\n",
+      "  Gemini Model: models/gemini-2.5-flash\n"
+     ]
+    }
+   ],
    "source": [
-    "PDF_DIR = r\"Z:\\Risper M\\ALL VALUATION REPORTS\\Valuation Reports\\Year 2021\\Year 2021\\OTHER COUNTIES\"\n",
-    "OUTPUT_DIR = \"./2021\"\n",
+    "PDF_DIR = r\"Z:\\Risper M\\2025 valuation reports\\Year 2025\"\n",
+    "OUTPUT_DIR = \"./additional_2025v1\"\n",
     "ERROR_LOG_DIR = \"./errors\"\n",
     "\n",
     "# Load environment variables\n",
@@ -226,12 +236,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "id": "06a1d538",
    "metadata": {},
    "outputs": [],
    "source": [
-    "SUPABASE_TABLE = \"valuations_2021_raw\"   \n",
+    "SUPABASE_TABLE = \"nrb_2025\"   \n",
     "\n",
     "\n",
     "def sanitize_dates_for_supabase(data: dict) -> dict:\n",
@@ -296,10 +306,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "id": "2f73ad33",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Updated OCR function defined\n"
+     ]
+    }
+   ],
    "source": [
     "def process_scanned_pdf_with_ocr(pdf_path: str, dpi: int = 150) -> str:\n",
     "    \"\"\"Convert scanned PDF to text using Tesseract OCR safely (memory-friendly).\"\"\"\n",
@@ -360,10 +378,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "id": "fd186301",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ PDF extraction with fallback defined\n"
+     ]
+    }
+   ],
    "source": [
     "def process_pdf_with_fallback(pdf_path: str) -> str:\n",
     "    \"\"\"Try multiple extraction methods\"\"\"\n",
@@ -398,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "id": "72030385",
    "metadata": {},
    "outputs": [],
@@ -715,10 +741,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "id": "5f11142a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Complete pipeline defined with full metadata\n"
+     ]
+    }
+   ],
    "source": [
     "def process_single_pdf_complete(pdf_path: str, filename: str) -> dict:\n",
     "    \"\"\"Complete pipeline: OCR → Gemini → Validate → Save\"\"\"\n",
@@ -825,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "id": "2157cff9",
    "metadata": {},
    "outputs": [],
@@ -986,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 153,
    "id": "179daab2",
    "metadata": {},
    "outputs": [
@@ -996,100 +1030,157 @@
      "text": [
       "\n",
       "======================================================================\n",
-      "🚀 PROCESSING 1 NEW PDFs\n",
+      "🚀 PROCESSING 2 NEW PDFs\n",
       "======================================================================\n",
       "\n",
       "======================================================================\n",
-      "[1/1] SOO 4764 1 21 LR NO 28223-33 FOURWAYS JUNCTION ESTATE OFF KIAMBU ROAD NAIROBI COUNTY.pdf\n",
+      "[1/2] doc42281920251030133205.pdf\n",
       "======================================================================\n",
       "    → Trying pdfplumber...\n",
       "    → Only 0 chars, trying OCR...\n",
       "    → Converting PDF to images at 150 dpi...\n",
-      "    → Running OCR on 30 pages...\n",
-      "      → Page 1/30... ✓ 638 chars\n",
-      "      → Page 2/30... ✓ 358 chars\n",
-      "      → Page 3/30... ✓ 336 chars\n",
-      "      → Page 4/30... ✓ 1281 chars\n",
-      "      → Page 5/30... ✓ 1388 chars\n",
-      "      → Page 6/30... ✓ 1623 chars\n",
-      "      → Page 7/30... ✓ 834 chars\n",
-      "      → Page 8/30... ✓ 85 chars\n",
-      "      → Page 9/30... ✓ 1700 chars\n",
-      "      → Page 10/30... ✓ 2233 chars\n",
-      "      → Page 11/30... ✓ 495 chars\n",
-      "      → Page 12/30... ✓ 2819 chars\n",
-      "      → Page 13/30... ✓ 2206 chars\n",
-      "      → Page 14/30... ✓ 2289 chars\n",
-      "      → Page 15/30... ✓ 2667 chars\n",
-      "      → Page 16/30... ✓ 1828 chars\n",
-      "      → Page 17/30... ✓ 2136 chars\n",
-      "      → Page 18/30... ✓ 1623 chars\n",
-      "      → Page 19/30... ✓ 601 chars\n",
-      "      → Page 20/30... ✓ 635 chars\n",
-      "      → Page 21/30... ✓ 647 chars\n",
-      "      → Page 22/30... ✓ 676 chars\n",
-      "      → Page 23/30... ✓ 269 chars\n",
-      "      → Page 24/30... ✓ 859 chars\n",
-      "      → Page 25/30... ✓ 161 chars\n",
-      "      → Page 26/30... ✓ 747 chars\n",
-      "      → Page 27/30... ✓ 905 chars\n",
-      "      → Page 28/30... ✓ 973 chars\n",
-      "      → Page 29/30... ✓ 708 chars\n",
-      "      → Page 30/30... ✓ 631 chars\n",
-      "    → OCR complete: 34880 characters\n",
-      "  ✓ OCR complete (30 pages, 34880 chars)\n",
+      "    → Running OCR on 21 pages...\n",
+      "      → Page 1/21... ✓ 968 chars\n",
+      "      → Page 2/21... ✓ 2401 chars\n",
+      "      → Page 3/21... ✓ 174 chars\n",
+      "      → Page 4/21... ✓ 219 chars\n",
+      "      → Page 5/21... ✓ 1014 chars\n",
+      "      → Page 6/21... ✓ 1472 chars\n",
+      "      → Page 7/21... ✓ 1528 chars\n",
+      "      → Page 8/21... ✓ 1009 chars\n",
+      "      → Page 9/21... ✓ 922 chars\n",
+      "      → Page 10/21... ✓ 2244 chars\n",
+      "      → Page 11/21... ✓ 1888 chars\n",
+      "      → Page 12/21... ✓ 1226 chars\n",
+      "      → Page 13/21... ✓ 1007 chars\n",
+      "      → Page 14/21... ✓ 545 chars\n",
+      "      → Page 15/21... ✓ 842 chars\n",
+      "      → Page 16/21... ✓ 687 chars\n",
+      "      → Page 17/21... ✓ 931 chars\n",
+      "      → Page 18/21... ✓ 93 chars\n",
+      "      → Page 19/21... ✓ 2059 chars\n",
+      "      → Page 20/21... ✓ 2972 chars\n",
+      "      → Page 21/21... ✓ 351 chars\n",
+      "    → OCR complete: 24919 characters\n",
+      "  ✓ OCR complete (21 pages, 24919 chars)\n",
       "      → Extracting IDs...\n",
       "      ✓ IDs extracted\n",
       "      → Extracting land/valuation data...\n",
       "      ✓ Land data extracted\n",
-      "✓ Saved → ./2021\\SOO 4764 1 21 LR NO 28223-33 FOURWAYS JUNCTION ESTATE OFF KIAMBU ROAD NAIROBI COUNTY.json\n",
-      "✓ Uploaded to Supabase\n",
+      "✓ Saved → ./additional_2025v1\\doc42281920251030133205.json\n",
+      "⚠ Supabase upload failed: Supabase upload failed: {'message': \"Could not find the 'drainage' column of 'nrb_2025' in the schema cache\", 'code': 'P\n",
       "\n",
-      "🎉 Batch finished in 1.2 minutes\n"
+      "======================================================================\n",
+      "[2/2] doc42282020251030133255.pdf\n",
+      "======================================================================\n",
+      "    → Trying pdfplumber...\n",
+      "    → Only 0 chars, trying OCR...\n",
+      "    → Converting PDF to images at 150 dpi...\n",
+      "    → Running OCR on 14 pages...\n",
+      "      → Page 1/14... ✓ 864 chars\n",
+      "      → Page 2/14... ✓ 2366 chars\n",
+      "      → Page 3/14... ✓ 185 chars\n",
+      "      → Page 4/14... ✓ 730 chars\n",
+      "      → Page 5/14... ✓ 1356 chars\n",
+      "      → Page 6/14... ✓ 1822 chars\n",
+      "      → Page 7/14... ✓ 1463 chars\n",
+      "      → Page 8/14... ✓ 638 chars\n",
+      "      → Page 9/14... ✓ 458 chars\n",
+      "      → Page 10/14... ✓ 833 chars\n",
+      "      → Page 11/14... ✓ 947 chars\n",
+      "      → Page 12/14... ✓ 226 chars\n",
+      "      → Page 13/14... ✓ 1496 chars\n",
+      "      → Page 14/14... ✓ 2637 chars\n",
+      "    → OCR complete: 16262 characters\n",
+      "  ✓ OCR complete (14 pages, 16262 chars)\n",
+      "      → Extracting IDs...\n",
+      "      ✓ IDs extracted\n",
+      "      → Extracting land/valuation data...\n",
+      "      ✓ Land data extracted\n",
+      "✓ Saved → ./additional_2025v1\\doc42282020251030133255.json\n",
+      "⚠ Supabase upload failed: Supabase upload failed: {'message': \"Could not find the 'drainage' column of 'nrb_2025' in the schema cache\", 'code': 'P\n",
+      "\n",
+      "🎉 Batch finished in 1.5 minutes\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[{'filename': 'SOO 4764 1 21 LR NO 28223-33 FOURWAYS JUNCTION ESTATE OFF KIAMBU ROAD NAIROBI COUNTY.pdf',\n",
+       "[{'filename': 'doc42281920251030133205.pdf',\n",
        "  'success': True,\n",
-       "  'data': {'property_id': 'Villa No. SPG/03/P1/L026 (Org. No. L66), Lilac Court 4, Fourways Junction, Nairobi',\n",
-       "   'report_reference': 'SOO/4764/1/21',\n",
-       "   'title_number': '',\n",
-       "   'lr_number': '28223/33',\n",
+       "  'data': {'property_id': 'doc42281920251030133205',\n",
+       "   'report_reference': 'SOO/DOO/5385/1/25',\n",
+       "   'title_number': 'NAIROBI/BLOCK 75/1031',\n",
+       "   'lr_number': '',\n",
        "   'ir_number': '',\n",
-       "   'client_name': '',\n",
+       "   'client_name': 'Corporate Recoveries, KCB Bank Kenya Limited',\n",
        "   'valuer_name': '',\n",
-       "   'inspection_date': '2021/05/11',\n",
+       "   'inspection_date': '2025/08/29',\n",
        "   'valuation_date': '',\n",
-       "   'location_county': 'Nairobi City County',\n",
-       "   'location_description': 'The property is located within Lidae Court 4 of Fourvays Junction Estate, off Kiambu Road in Nairobi City County. Fourways Junction lies approximately 350 mettes east of Total Fourways Service Station.',\n",
-       "   'location_coordinates': '1°1.2\\'45.07\"S, 36°50\\'18.54\"E',\n",
-       "   'plot_area_hectares': 40.73,\n",
-       "   'plot_area_acres': 0,\n",
-       "   'land_use': None,\n",
-       "   'plot_shape': None,\n",
-       "   'soil_type': None,\n",
-       "   'gradient': None,\n",
+       "   'location_county': 'Nairobi County',\n",
+       "   'location_description': 'Mumias South Road, to the immediate North of Shell Petrol Station, opposite Bidii Primary School and approximately 140 meters to the North of T-Square Mall within Buruburu Area',\n",
+       "   'location_coordinates': '1°17\\'09.3\"S 36°52\\'49.6\"E',\n",
+       "   'plot_area_hectares': 0.1551,\n",
+       "   'plot_area_acres': 0.3832,\n",
+       "   'land_use': 'mixed use development comprising a hotel facility and shops',\n",
+       "   'plot_shape': 'rectangular-shaped',\n",
+       "   'soil_type': 'ted soils',\n",
+       "   'gradient': 'fairly gentle',\n",
        "   'drainage': None,\n",
        "   'vegetation': None,\n",
        "   'tenure_type': 'leasehold',\n",
-       "   'registered_proprietor': 'Dieudonne Tshipala Shindanyi Yiweza',\n",
+       "   'registered_proprietor': 'James Kiniiya Gachiri',\n",
        "   'ownership_type': None,\n",
-       "   'encumbrances': 'Charged to United Nations Federal Credit Union for USD 125,000.00',\n",
-       "   'market_value_amount': 25000000,\n",
+       "   'encumbrances': 'charge dated January 27, 20214 in favour of National Bank of Kenya Limited to secure a sum of Kshs. 230,000,00.00',\n",
+       "   'market_value_amount': 0,\n",
        "   'market_value_currency': 'KShs',\n",
-       "   'metadata': {'source_file': 'SOO 4764 1 21 LR NO 28223-33 FOURWAYS JUNCTION ESTATE OFF KIAMBU ROAD NAIROBI COUNTY.pdf',\n",
-       "    'file_size_kb': 3075.4,\n",
-       "    'processing_time_seconds': 69.35,\n",
+       "   'metadata': {'source_file': 'doc42281920251030133205.pdf',\n",
+       "    'file_size_kb': 11013.9,\n",
+       "    'processing_time_seconds': 54.0,\n",
        "    'ocr_used': True,\n",
-       "    'pages_processed': 30,\n",
+       "    'pages_processed': 21,\n",
        "    'model_name': 'models/gemini-2.5-flash',\n",
-       "    'timestamp': '2025-12-03T15:52:47.132186'}},\n",
-       "  'timing': {'processing_seconds': 69.35}}]"
+       "    'timestamp': '2025-12-04T09:38:07.263939'}},\n",
+       "  'timing': {'processing_seconds': 54.0}},\n",
+       " {'filename': 'doc42282020251030133255.pdf',\n",
+       "  'success': True,\n",
+       "  'data': {'property_id': 'doc42282020251030133255',\n",
+       "   'report_reference': 'SOO/DOO/5386/1/25',\n",
+       "   'title_number': 'MATUNGULU/KAMBUSU/870',\n",
+       "   'lr_number': '',\n",
+       "   'ir_number': '',\n",
+       "   'client_name': 'KCB Bank Kenya Limited',\n",
+       "   'valuer_name': '',\n",
+       "   'inspection_date': '2025/10/13',\n",
+       "   'valuation_date': '',\n",
+       "   'location_county': 'Machakos County',\n",
+       "   'location_description': 'approximately 5 kilometres off Kangundo Road, 7 kilometres due Northeast of Tala shopping Center, 2 kilometres to the Northeast of Matungulu Boys’ High School and 360 meters to Southeast of Kambusu Secondary School within Kambusu area',\n",
+       "   'location_coordinates': '1°15\\'07.9\"S 37°21\\'54.9\"E',\n",
+       "   'plot_area_hectares': 0.18,\n",
+       "   'plot_area_acres': 0.44,\n",
+       "   'land_use': 'Agricultural',\n",
+       "   'plot_shape': 'irregular-shaped',\n",
+       "   'soil_type': 'red soils',\n",
+       "   'gradient': 'southward slope',\n",
+       "   'drainage': None,\n",
+       "   'vegetation': None,\n",
+       "   'tenure_type': 'freehold interest',\n",
+       "   'registered_proprietor': 'John Katunga Kavatha',\n",
+       "   'ownership_type': None,\n",
+       "   'encumbrances': 'Registered against the title is a charge dated 27/02/2024 in favour of KCB Bank Kenya Limited to secure a sum of KShs. 517,500.00.',\n",
+       "   'market_value_amount': 700000.0,\n",
+       "   'market_value_currency': 'KShs',\n",
+       "   'metadata': {'source_file': 'doc42282020251030133255.pdf',\n",
+       "    'file_size_kb': 7472.84,\n",
+       "    'processing_time_seconds': 35.58,\n",
+       "    'ocr_used': True,\n",
+       "    'pages_processed': 14,\n",
+       "    'model_name': 'models/gemini-2.5-flash',\n",
+       "    'timestamp': '2025-12-04T09:38:43.414744'}},\n",
+       "  'timing': {'processing_seconds': 35.58}}]"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
