--- a/notebooks/sql_editor.ipynb
+++ b/notebooks/sql_editor.ipynb
@@ -139,6 +139,81 @@
     "ALTER TABLE valuations_2021_raw\n",
     "ADD COLUMN id SERIAL PRIMARY KEY;"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80e79ab0",
+   "metadata": {},
+   "source": [
+    "Insert new data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62bac96a",
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "INSERT INTO valuations_2025_clean_v2 (\n",
+    "    property_id,\n",
+    "    report_reference,\n",
+    "    land_reg_number,\n",
+    "    client_name,\n",
+    "    valuer_name,\n",
+    "    inspection_date,\n",
+    "    valuation_date,\n",
+    "    location_county,\n",
+    "    location_description,\n",
+    "    location_coordinates,\n",
+    "    plot_area_hectares,\n",
+    "    plot_area_acres,\n",
+    "    land_use,\n",
+    "    plot_shape,\n",
+    "    soil_type,\n",
+    "    gradient,\n",
+    "    tenure_type,\n",
+    "    registered_proprietor,\n",
+    "    encumbrance_category,\n",
+    "    market_value_amount,\n",
+    "    metadata\n",
+    ")\n",
+    "VALUES (\n",
+    "    'doc42282020251030133255',\n",
+    "    'SOO/DOO/5386/1/25',\n",
+    "    'MATUNGULU/KAMBUSU/870',\n",
+    "    'KCB Bank Kenya Limited',\n",
+    "    'Simon Oruka Orwa',\n",
+    "    '2025/10/13',\n",
+    "    '2025/10/13',\n",
+    "    'Machakos',\n",
+    "    'approximately 5 kilometres off Kangundo Road, 7 kilometres due Northeast of Tala shopping Center, 2 kilometres to the Northeast of Matungulu Boys’ High School and 360 meters to Southeast of Kambusu Secondary School within Kambusu area',\n",
+    "    '1°15''07.9\"S 37°21''54.9\"E',\n",
+    "    0.18,\n",
+    "    0.44,\n",
+    "    'Agricultural',\n",
+    "    'Irregular',\n",
+    "    'Red Soil',\n",
+    "    'Gentle Slope',\n",
+    "    'Freehold',\n",
+    "    'John Katunga Kavatha',\n",
+    "    'Has Charges',\n",
+    "    700000,\n",
+    "    '{\n",
+    "        \"source_file\": \"doc42282020251030133255.pdf\",\n",
+    "        \"file_size_kb\": 7472.84,\n",
+    "        \"processing_time_seconds\": 35.58,\n",
+    "        \"ocr_used\": true,\n",
+    "        \"pages_processed\": 14,\n",
+    "        \"model_name\": \"models/gemini-2.5-flash\",\n",
+    "        \"timestamp\": \"2025-12-04T09:38:43.414744\"\n",
+    "    }'::jsonb\n",
+    ");\n"
+   ]
   }
  ],
  "metadata": {
