--- a/notebooks/Reporting.ipynb
+++ b/notebooks/Reporting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 86,
    "id": "293d42bc",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 87,
    "id": "407c582e",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 88,
    "id": "0f6e8e84",
    "metadata": {},
    "outputs": [
@@ -90,9 +90,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ Successfully fetched 114 records from Supabase\n",
+      "✓ Successfully fetched 117 records from Supabase\n",
       "\n",
-      "Dataset Shape: (114, 23)\n",
+      "Dataset Shape: (117, 23)\n",
       "Columns: ['property_id', 'report_reference', 'client_name', 'valuer_name', 'inspection_date', 'valuation_date', 'location_county', 'location_description', 'location_coordinates', 'plot_area_hectares', 'plot_area_acres', 'land_use', 'plot_shape', 'soil_type', 'gradient', 'tenure_type', 'registered_proprietor', 'market_value_amount', 'metadata', 'created_at', 'land_reg_number', 'encumbrance_category', 'id']\n"
      ]
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 89,
    "id": "de518961",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 90,
    "id": "bb206a63",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 91,
    "id": "2d37111d",
    "metadata": {},
    "outputs": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 92,
    "id": "cd6a79a4",
    "metadata": {},
    "outputs": [
@@ -513,15 +513,15 @@
       "================================================================================\n",
       "AI-GENERATED REPORT PREVIEW (First 500 characters):\n",
       "================================================================================\n",
-      "Property Valuation Portfolio Executive Report\n",
+      "Executive Report: Property Valuation Portfolio Analysis\n",
       "\n",
-      "Date: 4th December 2025\n",
-      "Prepared by: Samuel Wanyua, Data Scientist, NW Realite\n",
+      "2nd December 2025\n",
+      "\n",
+      "Prepared by Samuel Wanyua, Data Scientist, NW Realite\n",
       "\n",
       "EXECUTIVE SUMMARY\n",
       "\n",
-      "1. Portfolio Overview\n",
-      "The current property valuation portfolio comprises 114 properties, reflecting a substantial total market value of KShs 12,331,200,000. The average property value stands at KShs 108,168,421. However, a significant disparity is observed with the median property value at KShs 51,000,000, which suggests the presence of a few exception...\n"
+      "This report provides a comprehensive analysis of NW Realite's property valuation portfolio, reflecting significant growth in portfolio value despite a reduction in the number of properties valued month-over-month. The total market value stands at KShs 12.6 billion across 117 properties, demonstrating the company's capability in managing high-value ...\n"
      ]
     }
    ],
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 93,
    "id": "21dac93e",
    "metadata": {},
    "outputs": [
