Update valuations 2025 report v3

--- a/notebooks/Reporting.ipynb
+++ b/notebooks/Reporting.ipynb
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 95,
    "id": "cd6a79a4",
    "metadata": {},
    "outputs": [
@@ -513,15 +513,14 @@
       "================================================================================\n",
       "AI-GENERATED REPORT PREVIEW (First 500 characters):\n",
       "================================================================================\n",
-      "Executive Report: Property Valuation Portfolio Analysis\n",
+      "PROPERTY VALUATION EXECUTIVE REPORT\n",
       "\n",
       "2nd December 2025\n",
-      "\n",
       "Prepared by Samuel Wanyua, Data Scientist, NW Realite\n",
       "\n",
       "EXECUTIVE SUMMARY\n",
       "\n",
-      "This report provides a comprehensive analysis of NW Realite's property valuation portfolio, reflecting significant growth in portfolio value despite a reduction in the number of properties valued month-over-month. The total market value stands at KShs 12.6 billion across 117 properties, demonstrating the company's capability in managing high-value ...\n"
+      "This report provides a comprehensive overview of NW Realite's property valuation portfolio, analyzing key performance indicators, growth trends, client and geographic distribution, and risk factors. The portfolio currently comprises 117 properties with a total market value of KShs 12.63 Billion. While the number of properties saw a Month-over-Month (MoM) decrease, the ...\n"
      ]
     }
    ],
