Create internal dashboard

--- a/notebooks/sql_editor.ipynb
+++ b/notebooks/sql_editor.ipynb
@@ -214,6 +214,37 @@
     "    }'::jsonb\n",
     ");\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21e6bc97",
+   "metadata": {},
+   "source": [
+    "Turnaround days categories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "643f99f9",
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "ALTER TABLE valuations_2025_clean_v2\n",
+    "ADD COLUMN turnaround_category TEXT;\n",
+    "\n",
+    "UPDATE valuations_2025_clean_v2\n",
+    "SET turnaround_category = CASE\n",
+    "    WHEN (valuation_date - inspection_date) BETWEEN 0 AND 10 THEN 'Fast Track'\n",
+    "    WHEN (valuation_date - inspection_date) BETWEEN 11 AND 30 THEN 'Standard'\n",
+    "    WHEN (valuation_date - inspection_date) > 30 THEN 'Delayed'\n",
+    "    ELSE 'Invalid'\n",
+    "END;"
+   ]
   }
  ],
  "metadata": {
